Fixed_Strange_overflow_dashboard_maison

--- a/app_info/dashboard_maison.css
+++ b/app_info/dashboard_maison.css
@@ -8,7 +8,8 @@ body
 #site{
     display: grid;
     grid-template-columns: 2fr 5fr 23fr;
-	background-color:pink;
+    grid-template-rows:100vh;
+	background-color:blue;
 	
     font-family: Segoe UI Light, Georgia;
     text-decoration:none;
@@ -21,11 +22,13 @@ a{
 
 
 .main1{
-    grid-row: 1/4;
+	
+    grid-row: 1;
     display: grid;
     grid-template-rows:30vh 70vh;
     
 }
+
 .photo_nom{
     background-color: white;
     grid-row: 1; 
@@ -49,23 +52,29 @@ a{
 .cadre_info_fixe{
     grid-row: 2;
     display: grid;
-    grid-template-rows:repeat(37,2vh);
+    grid-template-rows:repeat(6,auto);
     background-color: lightgrey;
     
     text-align: center;
     color:black;
 }
 /*home mode titre*/
+
+
 .home_mode_titre{
-    grid-row: 1/4;
+    grid-row: 1;
+    max-height:2vh;
     font-size: 20px;
     margin:15%;
     margin-top:25%;
 }
 
 /*home mode bouttons*/
+
+
 .home_mode{
-    grid-row: 4/9;
+    grid-row:2;
+    max-height:20vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     color: #2cc872;
@@ -126,7 +135,9 @@ a{
 }
 
 .securite_titre{
-    grid-row: 9/13;
+	
+    grid-row: 3;
+    max-height:2vh;
     display:grid;
     font-size: 20px;
     padding-top: 5px;
@@ -136,7 +147,9 @@ a{
 }
 .securite{
     
-    grid-row: 13/21;
+    grid-row: 4;
+    
+    min-height:20vh;
 }
 .boutton_onoff{
     background-color: #40495e;
@@ -151,14 +164,17 @@ a{
 
 
 .utilisateur_titre{
-    grid-row: 21/27;
+    grid-row: 5;
+    
+    max-height:2vh;
     font-size: 18px;
     padding-top: 3px;
     margin:15%;
     margin-top:25%;
 }
 .utilisateur{
-	grid-row: 27/37;
+	grid-row: 6;
+	max-height:20vh;
     background-color: #40495e;
     color:#e48177;
     border-radius: 10px;
@@ -175,7 +191,7 @@ a{
 
 .main2{
     overflow: auto;
-    grid-row: 1/4;
+    grid-row: 1;
     display: grid;
     grid-auto-rows:30vh;
 }
