--- a/app_info/header.css
+++ b/app_info/header.css
@@ -9,6 +9,7 @@
     background-color: #333333;
     text-align: center; 
     width:2fr;
+    max-height:100vh;
     border-right: white solid 2px;
     font-family: Segoe UI Light;
     
