--- a/app_info/help.css
+++ b/app_info/help.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
-
+a{
+    text-decoration:none;
+    color:white;
+}
 
 body
 {
